--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <html>
+<head>
+	<script src="css/source-sans-pro.js"></script>
+	<link href="css/styles.css" rel="stylesheet">
+</head>
 <body>
 
 	<script id="home-tpl" type="text/x-handlebars-template">
 	    <div class='header'><h1>Home</h1></div>
-	    <div class='search-bar'><input class='search-key' type="text"/></div>
-	    <ul class='employee-list'></ul>
+	    <div class='search-bar'><input class='search-key' type="search"/></div>
+	    <div class="scroll"><ul class='employee-list'></ul></scroll>
 	</script>
 	<script id="employee-li-tpl" type="text/x-handlebars-template">
 		{{#.}}
 			<li> <a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}} <br/> {{this.title}} </a></li>
 		{{/.}}
 	</script>
+	<script id="employee-tpl" type="text/x-handlebars-template">
+		<div class='header'><a href='#' class="button header-button header-button-left">Back</a><h1>Details</h1></div>
+		<div class="details">
+			<img class='employee-image' src='img/{{firstName}}_{{lastName}}.jpg'/>
+			<h1>{{firstName}} {{lastName}}</h1>
+			<h2>{{title}}</h2>
+			<span class="location"></span>
+			<ul>
+				<li><a href="tel:{{officePhone}}">Call Office<br/> {{officePhone}}</a></li>
+				<li><a href="tel:{{cellPhone}}">Call Cell<br/> {{cellPhone}}</a></li>
+				<li><a href="tel:{{cellPhone}}">SMS<br/> {{cellPhone}}</a></li>
+			</ul>
+		</div>
+	</script>
 
 	<script src="lib/jquery-1.8.2.min.js"></script>
 	<script src="js/storage/ls-store.js"></script>
 	<script src="lib/handlebars.js"></script>
+	<script src="js/HomeView.js"></script>
+	<script src="js/EmployeeView.js"></script>
 	<script src="js/main.js"></script>
 	<script src="phonegap.js"></script>
 
