--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<li><a href="tel:{{officePhone}}">Call Office<br/> {{officePhone}}</a></li>
 				<li><a href="tel:{{cellPhone}}">Call Cell<br/> {{cellPhone}}</a></li>
 				<li><a href="tel:{{cellPhone}}">SMS<br/> {{cellPhone}}</a></li>
+				<li><a href="#" class="add-contact-btn">Add to Contacts</a></li>
 			</ul>
 		</div>
 	</script>
